@startuml unichat-tobe-entities
' Generated by /arch-diagrams — DO NOT EDIT BY HAND

skinparam componentStyle rectangle

title UniChat — TO-BE Entity Model (Post-Migration)

note as migration_note
  **DDD STRUCTURE preserved**
  Domain entities unchanged
  Only frontend layer migrates (Angular → Dioxus)
end note

package "Domain Entities (src-tauri/src/domain/entities/)" {
  entity ChatAccount {
    id: ChatAccountId
    platform: PlatformType
    username: Username
    display_name: DisplayName
    profile_image_url: Option<Url>
    access_token: AccessToken
    refresh_token: RefreshToken
    expires_at: DateTime
    status: AuthStatus
    is_active: bool
    created_at: DateTime
    updated_at: DateTime
  }

  entity ChatChannel {
    id: ChannelId
    platform: PlatformType
    platform_channel_id: PlatformChannelId
    channel_name: ChannelName
    is_live: bool
    viewer_count: Option<u64>
    game_name: Option<GameName>
    started_at: Option<DateTime>
    account_id: ChatAccountId
  }

  entity ChatMessage {
    id: MessageId
    channel_id: ChannelId
    platform: PlatformType
    platform_message_id: PlatformMessageId
    user_id: UserId
    username: Username
    display_name: DisplayName
    message: MessageContent
    message_type: MessageType
    is_highlighted: bool
    is_silent: bool
    color: Option<ChatColor>
    badges: Vec<Badge>
    emotes: Vec<Emote>
    timestamp: DateTime
  }

  entity CustomEmote {
    id: EmoteId
    platform: PlatformType
    account_id: ChatAccountId
    code: EmoteCode
    image_url: Url
    animated_url: Option<Url>
    is_global: bool
  }

  entity DashboardPreferences {
    id: PrefsId
    account_id: ChatAccountId
    layout_type: LayoutType
    show_chat: bool
    show_emotes: bool
    show_activity: bool
    theme: ThemeName
  }
}

package "Value Objects (src-tauri/src/domain/value_objects/)" {
  value_object PlatformType {
    Twitch
    Kick
    Youtube
  }

  value_object AuthStatus {
    Unauthorized
    Authorized
    TokenExpired
    Revoked
  }

  value_object Badge {
    name: String
    version: String
    image_url: Url
  }

  value_object Emote {
    code: String
    id: String
    image_url: Url
  }

  value_object Username
  value_object DisplayName
  value_object MessageContent
  value_object ChannelName
  value_object GameName
}

package "Domain Services (src-tauri/src/domain/services/)" {
  service AuthService {
    + start_oauth_flow(platform: PlatformType) -> OAuthRedirect
    + complete_oauth(code: String, verifier: String) -> ChatAccount
    + refresh_token(account: ChatAccount) -> ChatAccount
    + revoke_access(account: ChatAccount) -> Result
    + validate_token(account: ChatAccount) -> bool
  }

  service ChatService {
    + send_message(channel: ChannelId, message: MessageContent) -> ChatMessage
    + delete_message(message: ChatMessage) -> Result
    + get_messages(channel: ChannelId, limit: u32) -> Vec<ChatMessage>
    + validate_message(user: UserId) -> Option<ChatMessage>
  }

  service OverlayService {
    + start_server(port: u16) -> WsUrl
    + stop_server() -> Result
    + broadcast_message(message: ChatMessage) -> Result
    + get_config() -> OverlayConfig
    + update_config(config: OverlayConfig) -> Result
  }
}

package "Dioxus Signals (NEW - replaces Angular state)" {
  signal chat_accounts_signal {
    type: Vec<ChatAccount>
    default: []
  }

  signal chat_messages_signal {
    type: Vec<ChatMessage>
    default: []
  }

  signal platform_sessions_signal {
    type: Map<PlatformType, SessionState>
    default: {}
  }

  signal overlay_config_signal {
    type: OverlayConfig
    default: default_config
  }

  signal theme_signal {
    type: ThemeVariant
    default: ThemeVariant::Dark
  }
}

package "dioxus-shared" {
  [ThemeVariant]
  [DynamicRenderer]
  [Schema]
  [SignalStore]
}

' Signal relationships
chat_accounts_signal --> ChatAccount
chat_messages_signal --> ChatMessage
platform_sessions_signal --> ChatAccount
overlay_config_signal --> OverlayConfig
theme_signal --> ThemeVariant

' Domain relationships
AuthService --> ChatAccount
AuthService --> PlatformType
AuthService --> AuthStatus

ChatService --> ChatMessage
ChatService --> ChatChannel
ChatService --> PlatformType

OverlayService --> ChatMessage

ChatAccount ..> PlatformType
ChatChannel ..> PlatformType
ChatMessage ..> PlatformType

@enduml
